--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,6 +25,4 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: 663b3ac956a509d388360269391b817a67cbe5ab
+      run: mvn deploy -Dregistry=https://maven.pkg.github.com/droberts-abacussystems -Dtoken=663b3ac956a509d388360269391b817a67cbe5ab
