--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>github</name>
+            <url>https://maven.pkg.github.com/droberts-abacussystems/eureka-stack-aws</url>
+        </repository>
+    </distributionManagement>
+
 </project>
