--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
+        <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>systems.abacus</groupId>
     <artifactId>eureka-stack-aws</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2</version>
     <name>eureka stack for AWS</name>
     
     <properties>
         <java.version>1.8</java.version>
-        <kotlin.version>1.4.0</kotlin.version>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <kotlin.version>1.4.30</kotlin.version>
+        <spring-cloud.version>2020.0.1</spring-cloud.version>
     </properties>
 
     <dependencies>
